# arize-ax-cli

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
src/ax/: __init__.py  __main__.py  ascii_art.py  cli.py  version.py
src/ax/commands/: __init__.py  cache.py  config.py  datasets.py  projects.py
src/ax/config/: __init__.py  input_readers.py  manager.py  schema.py  setup.py
src/ax/core/: __init__.py  decorators.py  error_formatter.py  exceptions.py  output.py  pydantic.py
src/ax/utils/: __init__.py  console.py  file_io.py
tests/: __init__.py  conftest.py
tests/config/: test_manager.py  test_schema.py  test_setup.py
